--- a/src/Components/Layouts/ContactForm/ContactForm.css
+++ b/src/Components/Layouts/ContactForm/ContactForm.css
@@ -3,6 +3,7 @@
     background-color: #ececec;
     padding: 20px;
     border-radius: 10px;
+    border: 2px solid #00000080;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     max-width: 500px;
     margin: 0 auto;
