--- a/src/Components/Layouts/Information/Information.css
+++ b/src/Components/Layouts/Information/Information.css
@@ -7,12 +7,16 @@
 .info{
    text-align: center;
 }
+.info h2{
+color: #999999;
+}
 
 .icon{
     width: 3rem;
    height:3rem;
+   color: #5c9f24;
 }
 .information{
-    background-color: #76885b;
+    background-color: #ffffff1a;
     margin: 0;
 }
