--- a/src/Components/Layouts/Modal/Modal.css
+++ b/src/Components/Layouts/Modal/Modal.css
@@ -1,62 +1,54 @@
-.modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.9);
   }
-  
-  .modal-popup {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    max-width: 500px;
-    width: 100%;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-    animation: fadeIn 0.3s ease-in-out; 
+  to {
+    opacity: 1;
+    transform: scale(1);
   }
-  
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-      transform: scale(0.9);
-    }
-    to {
-      opacity: 1;
-      transform: scale(1);
-    }
-  }
-  
-  .modal-body {
-    margin-top: 10px;
-    margin-bottom: 20px;
-  }
-  
-  .close-button {
-    width: 7rem;
-    height: 2rem;
-    border-radius: 5px;
-    background: linear-gradient(0.25turn, #199202, #7cd900, #199202);
-    border: none;
-    cursor: pointer;
-  }
+}
 
-  .carrito-button{
-    width: 7rem;
-    height: 2rem;
-    border-radius: 5px;
-    background: linear-gradient(0.25turn, #199202, #7cd900, #199202);
-    border: none;
-    cursor: pointer;
-    margin-left: 2rem;
-  }
-  
-  .close-button:hover {
-    background-color: #0056b3;
-  }
-  
+.modal-body {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.carrito-button{
+  width: 60%;
+  height: 2rem;
+  border-radius: 5px;
+  background: linear-gradient(0.25turn, #199202, #7cd900, #199202);
+  border: none;
+  cursor: pointer;
+}
+
+.modal-popup {
+  position: relative;
+  width: 400px;
+  padding: 20px;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.close-mark {
+  position: absolute;
+  top: 10px; 
+  right: 10px; 
+  cursor: pointer;
+  font-size: 24px; 
+  color: #333; 
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items:center;
+}
