--- a/src/Components/Pages/Footer/Footer.css
+++ b/src/Components/Pages/Footer/Footer.css
@@ -4,6 +4,7 @@
     align-items: center;
     font-size: 1.5rem;
     height: 3rem;
-    background-color: #373837 ;
+    background-color: #2a2a2a ;
     color: white;
+    width: 100vw;
 }
