--- a/src/Components/Pages/Home/Home.css
+++ b/src/Components/Pages/Home/Home.css
@@ -9,17 +9,16 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #373837 ;
-   
-    height: 30rem;
-   
+    background-color:#f1f1f1 ;
+    height: 100vh;
+    width: 100vw;
     text-align: center;
     margin-top: 3rem;
     
 }
 
 .quienes-somos{
-    width: 100%;
+    width: 100vw;
     height: 100%;
     display: flex;
     align-items: center;
@@ -32,21 +31,22 @@
     font-size: 1.5rem;
     font-family: "Merriweather", serif;
     font-weight: 400;
-    font-style: normal;color: white;
+    font-style: normal;color: rgb(0, 0, 0);
 }
 
 .NuestrosPlanes{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #DDDDDD ;
-    height: 30rem;
+    background-color: #ffffff ;
+    height: 100vh;
+    width: 100vw;
    
 }
 
 .bonos{
-    width: 20rem;
-    height: 20rem;
+    width: 30rem;
+    height: 25rem;
     background-color: #ececec;
     margin: 5rem;
     display: flex;
@@ -54,13 +54,18 @@
     align-items: center;
     flex-direction: column;
     text-align: center;
-    border: solid 2px #6ca917;
-    box-shadow: 2px 2px 0 0 #6ca917;
+    border: solid 2px #00000080;
+    box-shadow: 2px 2px 0 0 #00000080;
     border-radius: 4px;
+    color: white;
 }
 
 .text-card{
-    margin: 2rem
+    margin: 2rem;
+    color: gray;
+}
+.title-card{
+    color: black;
 }
 
 .button-card{
@@ -78,8 +83,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #76885B ;
-    height: 30rem;
+    background-color: #f1f1f1 ;
+    height: 100vh;
+    width: 100vw;
+    
 }
 
 .preguntas-frecuentes{
@@ -89,25 +96,32 @@
     align-items: center;
     flex-direction: column;
     text-align: center;
+   
+
+   
 }
 
 .preguntas-frecuentes h2{
     margin: 1rem;
+    color: #010401e6;
 }
 .FormularioContacto{
-    background-color: #DDDDDD;
-    height: 40rem;
+    background-color: #f1f1f1 ;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100vw;
 }
 .FormularioContacto{
-    background-color: #DDDDDD ;
+    background-color: #f1f1f1  ;
     height: 40rem;
+
 }
 
 .infor{
-    background-color: #76885b ;
+    background-color:  #ffffff1a ;
     padding-top: 1rem;
     height: 10rem;
+    width: 100vw;
 }
