--- a/src/Components/Layouts/ContactForm/ContactForm.css
+++ b/src/Components/Layouts/ContactForm/ContactForm.css
@@ -1,12 +1,10 @@
 .contact-form {
-    padding: 5rem;
-    background-color: #ececec;
-    padding: 20px;
-    border-radius: 10px;
-    border: 2px solid #00000080;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
-    margin: 0 auto;
+  width: 100%;
+  height: auto;
+  background: #daff99;
+  padding: 2rem;
+  border-radius: 1rem;
+
   }
 
   .form{
@@ -46,10 +44,12 @@
   .submit-button {
     width: 100%;
     padding: 10px;
-    background: linear-gradient(0.25turn, #199202, #7cd900, #199202);
-    color: #000000;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor:pointer;
+    background: #0c4537;
+    color: white;
+    border: 2px solid rgb(14, 53, 24);
+    border-radius: .5rem;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+    padding-bottom: 1rem;
 }
