--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,69 +1,113 @@
-*{
+* {
     margin: 0;
     padding: 0;
-}
-.logo{
-    height: 5rem;
-    width: 14rem;
-}
-.itemNavbar{
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: 'Arial', sans-serif;
+  }
+  
+  .logo-list {
+    list-style: none;
+  }
+  
+  .logo {
+    height: 4rem;
+    width: auto;
+    padding-right: 2rem;
+  }
+  
+  .itemNavbar {
     display: flex;
     align-items: center;
     list-style: none;
-    text-decoration: none;
-    color: black;
-    
-}
-
-.container-items{
+    margin: 0;
+    padding: 0;
+  }
+  
+  .container-items {
     display: flex;
     justify-content: space-between;
-    text-decoration: none;
-    background-color: black;
+    background-color: #052d23;
     position: fixed;
-    width: 100vw;
+    width: 100%;
     top: 0;
     z-index: 1000;
-
-}
-.container1{
+    padding: 1rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .container1 {
     text-decoration: none;
     font-size: 1.2rem;
-    padding-right: 1.5rem ;
+    padding-right: 1.5rem;
     color: white;
     position: relative;
-    display: inline-block;
     cursor: pointer;
-    
-}
-.container1::after {
+  }
+  
+  .container1::after {
     content: "";
     position: absolute;
     width: 85%;
-    height: 2px; /* Grosor de la raya */
-    background-color: #00af00; /* Color de la raya */
+    height: 2px;
+    background-color: #0c4537;
     bottom: 0;
     left: 0;
     transform: scaleX(0);
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
-}
-
-.container1:hover::after {
+  }
+  
+  .container1:hover::after {
     transform: scaleX(1);
     transform-origin: bottom left;
-
-}
-
-.container1.clicked::after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-}
-
-.icons{
-    height: 1.5rem;
-    width: 1.5rem;
-    margin: 4px;
+  }
+  
+  .btn-login {
+    width: 7rem;
+    height: 2.5rem;
+    background: #0c4537;
     color: white;
-    margin-right: 1.5rem;
-}
+    border: 2px solid rgb(14, 53, 24);
+    border-radius: 2rem;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+    margin-top: .8rem;
+    margin-right: 2rem;
+    padding-bottom: 1rem;
+  }
+  
+  .btn-login:hover {
+    background-color: #085a46;
+  }
+  
+  .btn-login:focus {
+    outline: none;
+  }
+  
+  @media (max-width: 768px) {
+    .container-items {
+      flex-direction: column;
+      align-items: center;
+      padding: 1rem 0;
+    }
+  
+    .itemNavbar {
+      flex-direction: column;
+      align-items: center;
+      margin-top: 1rem;
+    }
+  
+    .logo {
+      padding-bottom: 1rem;
+    }
+  
+    .btn-login {
+      margin-top:1rem;
+      background: #0c4537;
+  }
+  }
+  
