--- a/src/Components/Pages/Footer/Footer.css
+++ b/src/Components/Pages/Footer/Footer.css
@@ -2,9 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.5rem;
-    height: 3rem;
-    background-color: #2a2a2a ;
+    font-size: 1.2rem;
+    height: 5em;
+    background-color: #08372b ;
     color: white;
     width: 100vw;
 }
