--- a/src/Components/Pages/Home/Home.css
+++ b/src/Components/Pages/Home/Home.css
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color:#f1f1f1 ;
+    background-color:#052d23 ;
     height: 100vh;
     width: 100vw;
     text-align: center;
@@ -38,26 +38,47 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ffffff ;
+    background-color: #052d23 ;
     height: 100vh;
     width: 100vw;
    
 }
 
-.bonos{
-    width: 30rem;
+.bonos1{
+    width: 18rem;
     height: 25rem;
-    background-color: #ececec;
-    margin: 5rem;
+    background-color: #daff99;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
     text-align: center;
-    border: solid 2px #00000080;
-    box-shadow: 2px 2px 0 0 #00000080;
-    border-radius: 4px;
-    color: white;
+    border-radius: 1rem;
+    color: #052d23;
+    margin: 5rem;
+}
+.bonos2{
+    width: 18rem;
+    height: 25rem;
+    background-color: #dbd7ff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 1rem;
+    color: #052d23;
+    margin: 5rem;
+}
+.bonos3{
+    width: 18rem;
+    height: 25rem;
+    background-color: #daeafd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 1rem;
+    color: #052d23;
+    margin: 5rem;
 }
 
 .text-card{
@@ -65,16 +86,22 @@
     color: gray;
 }
 .title-card{
-    color: black;
+    color: #052d23;
 }
 
 .button-card{
     width: 14rem;
     height: 2.5rem;
-    border-radius: 5px;
-    background: linear-gradient(0.25turn, #199202, #7cd900, #199202);
-    border: none;
+    background: #0c4537;
+    color: white;
+    border: 2px solid rgb(14, 53, 24);
+    border-radius: 2rem;
     cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+
+    
+  
    
 }
 
@@ -83,7 +110,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f1f1f1 ;
+    background-color: #052d23 ;
     height: 100vh;
     width: 100vw;
     
@@ -105,23 +132,38 @@
     margin: 1rem;
     color: #010401e6;
 }
+
 .FormularioContacto{
-    background-color: #f1f1f1 ;
-    height: 100vh;
+    background-color: #052d23  ;
+    height: 40rem;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
-}
-.FormularioContacto{
-    background-color: #f1f1f1  ;
-    height: 40rem;
 
 }
 
 .infor{
-    background-color:  #ffffff1a ;
+    background-color:  #052d23 ;
     padding-top: 1rem;
     height: 10rem;
     width: 100vw;
+}
+.containerBonos{
+    width: 95%;
+    height: 80vh;
+    background: #ffffff;
+    border-radius: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.containerPreguntas{
+    width: 95%;
+    height: 80vh;
+    background-color: #ffebe1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1rem;
 }
