--- a/src/Components/Layouts/ImageLink/ImageLink.css
+++ b/src/Components/Layouts/ImageLink/ImageLink.css
@@ -2,17 +2,15 @@
     width: 17rem;
     height: 17rem;
     background-color: #fff;
-    border-radius: 3px;
-    border: 2px solid #999999;
+    border-radius: 1rem;
 }
 
 .image-link{
     width: 17.5rem;
-    height: 17.5rem;
-    background-color: #6ca9176b;    
+    height: 17.5rem; 
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 4px;
-    border: 2px solid #999999;
+    border-radius: 1rem;
+   
 }
