Se organizaron algunos estilos

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -52,7 +52,7 @@
     position: absolute;
     width: 85%;
     height: 2px;
-    background-color: #0c4537;
+    background-color: #e3ff9f;
     bottom: 0;
     left: 0;
     transform: scaleX(0);
