--- a/src/Components/Layouts/Modal/Modal.css
+++ b/src/Components/Layouts/Modal/Modal.css
@@ -9,19 +9,36 @@
   }
 }
 
-.modal-body {
-  margin-top: 10px;
-  margin-bottom: 20px;
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+    transform: scale(1);
+  }
+  to {
+    opacity: 0;
+    transform: scale(0.9);
+  }
 }
 
-.carrito-button{
-  width: 60%;
-  height: 2rem;
-  border-radius: 5px;
-  background: #0c4537;
-  border: none;
-  cursor: pointer;
-  color: white;
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: start;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.3s ease-in-out;
+}
+
+.modal-overlay.show {
+  visibility: visible;
+  opacity: 1;
 }
 
 .modal-popup {
@@ -35,26 +52,37 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+.modal-popup.fade-out {
+  animation: fadeOut 0.3s ease-in-out;
+}
+
+.modal-body {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.carrito-button {
+  width: 60%;
+  height: 2rem;
+  border-radius: 5px;
+  background: #0c4537;
+  border: none;
+  cursor: pointer;
+  color: white;
 }
 
 .close-mark {
   position: absolute;
-  top: 10px; 
-  right: 10px; 
+  top: 10px;
+  right: 10px;
   cursor: pointer;
-  font-size: 24px; 
-  color: #333; 
+  font-size: 24px;
+  color: #333;
 }
 
-.modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items:center;
-  text-align: start;
+body.modal-open {
+  overflow: hidden;
 }
