--- a/src/Components/Pages/Home/Home.css
+++ b/src/Components/Pages/Home/Home.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+IN:wght@100..400&display=swap');
+
 *{
     margin: 0;
     padding: 0;
    
 }
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+
 .QuienesSomos{
     display: flex;
     justify-content: center;
@@ -24,6 +27,28 @@
     align-items: center;
     justify-content: center;
     object-fit: cover ;
+    flex-direction: column;
+}
+
+.title{
+    color: #ffffff;
+    font-size: 2rem;
+    font-weight: 500;
+}
+
+.title-span{
+    color: #daff99;
+    font-family: "Playwrite IN", cursive;
+    font-weight: 300;
+}
+
+.title-text{
+    margin-bottom: 3rem;
+    color: #ffffff;
+    font-size: 1.5rem;
+    font-weight: 500;
+    padding: 1rem;
+    max-width: 90vw;
 }
 
 .text-container{
@@ -56,6 +81,7 @@
     color: #052d23;
     margin: 4rem;
 }
+
 .bonos2{
     width: 18rem;
     height: 25rem;
@@ -68,6 +94,7 @@
     color: #052d23;
     margin: 5rem;
 }
+
 .bonos3{
     width: 18rem;
     height: 25rem;
@@ -85,6 +112,7 @@
     margin: 2rem;
     color: gray;
 }
+
 .title-card{
     color: #052d23;
 }
@@ -99,10 +127,6 @@
     cursor: pointer;
     font-size: 1rem;
     transition: background-color 0.3s ease;
-
-    
-  
-   
 }
 
 
@@ -159,7 +183,7 @@
 .containerPreguntas{
     width: 95%;
     height: 80vh;
-    background-color: #ffebe1;
+    background-color: #daeafd;
     display: flex;
     justify-content: center;
     align-items: center;
