--- a/src/Components/Pages/Home/Home.css
+++ b/src/Components/Pages/Home/Home.css
@@ -59,75 +59,122 @@
     font-style: normal;color: rgb(0, 0, 0);
 }
 
-.NuestrosPlanes{
+
+/* Seccion bonos */
+.NuestrosPlanes {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #052d23 ;
+    background-color: #052d23;
     height: 100vh;
     width: 100%;
-   
 }
 
-.bonos1{
-    width: 18rem;
-    height: 25rem;
+.containerBonos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    border-radius: 20px;
+    background: #ffffff;
+    width: 95%;
+    height: 80vh;
+}
+
+.header-bonos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 3rem;
+    margin-top: 4rem;
+}
+
+.cards-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+    flex-wrap: wrap; /* Esto permite que las tarjetas se adapten en pantallas más pequeñas */
+    margin-top: 2rem;
+    width: 100%;
+}
+
+.bonos1, .bonos2, .bonos3 {
+    width: 31rem;
+    height: 27rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 1.3rem;
+    color: #052d23;
+    padding: 1rem;
+}
+
+.bonos1 {
     background-color: #daff99;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border-radius: 1rem;
-    color: #052d23;
-    margin: 4rem;
 }
 
-.bonos2{
-    width: 18rem;
-    height: 25rem;
+.bonos2 {
     background-color: #dbd7ff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border-radius: 1rem;
-    color: #052d23;
-    margin: 5rem;
 }
 
-.bonos3{
-    width: 18rem;
-    height: 25rem;
+.bonos3 {
     background-color: #daeafd;
+}
+
+.text-card {
+    margin: 1rem;
+    font-size: 1.1rem;
+    color: #052d23;
+    font-weight: 500;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border-radius: 1rem;
+    text-align: start;
+    margin-left: 30px
+}
+
+.title-card {
+    margin-top: 15px;
     color: #052d23;
-    margin: 5rem;
+    display: flex;
+    justify-content:flex-start;
+    margin-left: 30px;
+    font-size: 2rem;
 }
 
-.text-card{
-    margin: 2rem;
-    color: gray;
-}
-
-.title-card{
-    color: #052d23;
-}
-
-.button-card{
+.button-card {
     width: 14rem;
     height: 2.5rem;
     background: #0c4537;
     color: white;
-    border: 2px solid rgb(14, 53, 24);
+    border: solid 2px #4c9c70;
     border-radius: 2rem;
     cursor: pointer;
     font-size: 1rem;
-    transition: background-color 0.3s ease;
+    transition: 0.3s ease;
+    margin-top: 10px;
 }
+
+.button-card:hover{
+    background-color: #052d23;
+}
+
+.tree-icon{
+    color: #0c4537;
+    width: 2.7rem;
+    height: 2.7rem;
+}
+
+.title-bonos{
+    margin-top: 1rem;
+    color: #0c4537;
+    font-size: 3.2rem;
+    font-family: "Playwrite IN", cursive;
+}
+
+/* Seccion Preguntas frecuentes */
 
 
 .PreguntasFrecuentes{
@@ -171,15 +218,8 @@
     height: 10rem;
     width: 100%;
 }
-.containerBonos{
-    width: 95%;
-    height: 80vh;
-    background: #ffffff;
-    border-radius: 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
+
 .containerPreguntas{
     width: 95%;
     height: 80vh;
