--- a/src/Components/Pages/UserProfile/UserProfile.css
+++ b/src/Components/Pages/UserProfile/UserProfile.css
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   font-family: 'Roboto', sans-serif;
-  background-image: url('D:/Sena 2024/planta-vida/src/assets/background-image.jpg');
+  background-image: url('C:\Users\SENA\Desktop\planta-vida\src\assets\imagenes\background-image.jpg');
   background-size: cover;
   background-position: center;
 }
