--- a/src/Components/Pages/Home/Home.css
+++ b/src/Components/Pages/Home/Home.css
@@ -66,7 +66,7 @@
     justify-content: center;
     align-items: center;
     background-color: #052d23;
-    height: 100vh;
+    height: auto;
     width: 100%;
 }
 
@@ -228,4 +228,31 @@
     justify-content: center;
     align-items: center;
     border-radius: 1rem;
+}
+@media screen and (max-width: 1400px){
+    .containerBonos{
+        width: 95%;
+        height: 55rem;
+       
+    }
+    .bonos1, .bonos2, .bonos3 {
+        width: 23rem;
+        height: 28rem;
+    }
+    .QuienesSomos{
+        height: 50rem;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 920px){
+
+}
+
+@media screen and (max-width: 768px){
+
+}
+
+@media screen and (max-width: 480px){
+
 }
