--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -5,7 +7,7 @@
   }
   
   body {
-    font-family: 'Arial', sans-serif;
+    font-family: "Nunito", sans-serif;
   }
   
   .logo-list {
@@ -134,18 +136,6 @@
   transition: 500ms;
 }
 
-@media screen and (max-width: 1279px){
-
-}
-
-@media screen and (max-width: 920px){
-
-}
-
-@media screen and (max-width: 768px){
-
-}
-
-@media screen and (max-width: 480px){
+@media(max-width: 920px) {
 
 }
