--- a/src/Components/Pages/Home/Home.css
+++ b/src/Components/Pages/Home/Home.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playwrite+IN:wght@100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 *{
     margin: 0;
@@ -34,11 +33,12 @@
     color: #ffffff;
     font-size: 2rem;
     font-weight: 500;
+    font-family: "Nunito", sans-serif;
 }
 
 .title-span{
     color: #daff99;
-    font-family: "Playwrite IN", cursive;
+    font-family: "Nunito", sans-serif;
     font-weight: 300;
 }
 
@@ -49,12 +49,13 @@
     font-weight: 500;
     padding: 1rem;
     max-width: 90vw;
+    font-family: "Nunito", sans-serif;
 }
 
 .text-container{
     font-weight: 600;
     font-size: 1.5rem;
-    font-family: "Merriweather", serif;
+    font-family: "Nunito", sans-serif;
     font-weight: 400;
     font-style: normal;color: rgb(0, 0, 0);
 }
@@ -111,6 +112,7 @@
     border-radius: 1.3rem;
     color: #052d23;
     padding: 1rem;
+    font-family: "Nunito", sans-serif;
 }
 
 .bonos1 {
@@ -171,11 +173,10 @@
     margin-top: 1rem;
     color: #0c4537;
     font-size: 3.2rem;
-    font-family: "Playwrite IN", cursive;
+    font-family: "Nunito", sans-serif;
 }
 
 /* Seccion Preguntas frecuentes */
-
 
 .PreguntasFrecuentes{
     display: flex;
@@ -194,7 +195,6 @@
     align-items: center;
     flex-direction: column;
     text-align: center;
-  
 }
 
 .preguntas-frecuentes h2{
@@ -219,7 +219,6 @@
     width: 100%;
 }
 
-
 .containerPreguntas{
     width: 95%;
     height: 80vh;
@@ -227,32 +226,82 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: row;
     border-radius: 1rem;
 }
+
+.header-preguntas{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+
 @media screen and (max-width: 1400px){
     .containerBonos{
         width: 95%;
         height: 55rem;
        
     }
+
     .bonos1, .bonos2, .bonos3 {
         width: 23rem;
         height: 28rem;
     }
+
     .QuienesSomos{
         height: 50rem;
         width: 100%;
     }
 }
 
-@media screen and (max-width: 920px){
+@media (max-width: 920px){
+
+    .quienes-somos{
+        width: 100vw;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        object-fit: cover ;
+        flex-direction: column;
+    }
+
+    .bonos1, .bonos2, .bonos3 {
+        width: 14rem;
+        height: 28rem;
+    }
+
+    .title-card{
+        font-size: 1.5rem;
+        margin-left: 0;
+        justify-content: center;
+        align-items: center;
 
 }
 
-@media screen and (max-width: 768px){
+.text-card{
+    font-size: 1rem;
+}
+
+.title-bonos{
+    margin-top: 1rem;
+    color: #0c4537;
+    font-size: 3.2rem;
+    font-family: "Nunito", sans-serif;
+}
+
+.button-card {
+    width: 1rem;
+    height: 2.5rem;
+}
+
+}
+@media  (max-width: 768px){
 
 }
 
-@media screen and (max-width: 480px){
+@media  (max-width: 480px){
 
 }
