--- a/src/Components/Pages/Home/Home.css
+++ b/src/Components/Pages/Home/Home.css
@@ -20,7 +20,7 @@
 }
 
 .quienes-somos{
-    width: 100vw;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -76,7 +76,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    width: 100%;
+    
     border-radius: 20px;
     background: #ffffff;
     width: 95%;
@@ -182,6 +182,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     background-color: #052d23 ;
     height: 100vh;
     width: 100%;
@@ -221,13 +222,14 @@
 
 .containerPreguntas{
     width: 95%;
-    height: 80vh;
+    height: 100%;
     background-color: #daeafd;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
     border-radius: 1rem;
+    margin-top: 4rem;
 }
 
 .header-preguntas{
@@ -236,6 +238,12 @@
     align-items: center;
     flex-direction: column;
     text-align: center;
+    color: #0c4537;
+    font-size: 2rem;
+    padding-top: 2rem;
+}
+.formas-bono{
+    display: flex;
 }
 
 @media screen and (max-width: 1400px){
@@ -270,7 +278,7 @@
 
     .bonos1, .bonos2, .bonos3 {
         width: 14rem;
-        height: 28rem;
+        height: 32rem;
     }
 
     .title-card{
@@ -283,6 +291,7 @@
 
 .text-card{
     font-size: 1rem;
+    margin: 0.2rem;
 }
 
 .title-bonos{
@@ -293,8 +302,21 @@
 }
 
 .button-card {
-    width: 1rem;
-    height: 2.5rem;
+    width: 60%;
+    height: auto;
+    padding: .6rem;
+    margin-top:1rem ;
+}
+.bonos1{
+    padding-top: 2rem;
+}
+.preguntas-frecuentes{
+    margin: 2rem;
+    margin-bottom: 5rem;
+}
+.header-preguntas{
+    font-size: 2rem;
+    padding-top: 8rem;
 }
 
 }
