Se agrega carro de compras y se arreglan estilos de modal

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -136,6 +136,13 @@
   transition: 500ms;
 }
 
+.shopi-bag{
+  color: #fff;
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-right: 10px;
+}
+
 @media(max-width: 920px) {
 
 }
