--- a/src/Components/Layouts/Modal/Modal.css
+++ b/src/Components/Layouts/Modal/Modal.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -62,16 +64,20 @@
 .modal-body {
   margin-top: 10px;
   margin-bottom: 20px;
+  font-size: 1.1rem;
+  margin: 12px;
+  font-family: "Nunito", sans-serif;
 }
 
 .carrito-button {
   width: 60%;
-  height: 2rem;
-  border-radius: 5px;
+  height: 2.4rem;
+  border-radius: 2rem;
   background: #0c4537;
-  border: none;
+  font-size: 1rem;
   cursor: pointer;
   color: white;
+  border: solid 2px #4c9c70;
 }
 
 .close-mark {
