--- a/src/Components/Pages/Home/Home.css
+++ b/src/Components/Pages/Home/Home.css
@@ -39,7 +39,7 @@
 .title-span{
     color: #daff99;
     font-family: "Nunito", sans-serif;
-    font-weight: 300;
+    font-weight: 500;
 }
 
 .title-text{
@@ -174,6 +174,10 @@
     color: #0c4537;
     font-size: 3.2rem;
     font-family: "Nunito", sans-serif;
+}
+
+.resalto{
+    font-weight: 700;
 }
 
 /* Seccion Preguntas frecuentes */
