--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -143,6 +143,53 @@
   margin-right: 10px;
 }
 
+/* estilos del carrito */
+
+.cart-container {
+  position: relative;
+  display: inline-block;
+}
+
+.cart-tooltip {
+  position: absolute;
+  bottom: -30px; 
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #ffff;
+  color: #272727;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 12px;
+  white-space: nowrap;
+  z-index: 100; /* Asegúrate de que esté por encima de otros elementos */
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  font-family: "Nunito", sans-serif;
+  font-size: 14px;
+}
+
+.cart-container:hover .cart-tooltip {
+  opacity: 1; 
+}
+
+.cart-indicator {
+  position: absolute;
+  top: -10px;
+  right: -10px; /* Coloca el contador en la esquina superior derecha */
+  background-color: #ff4b4b;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 8px;
+  font-size: 12px;
+  z-index: 50;
+}
+
+.shopi-bag {
+  font-size: 24px; /* Ajusta el tamaño del icono si es necesario */
+  color: #fff;
+}
+
+
 @media(max-width: 920px) {
 
 }
