--- a/src/Components/Layouts/ContactForm/ContactForm.css
+++ b/src/Components/Layouts/ContactForm/ContactForm.css
@@ -34,7 +34,7 @@
     border-radius: 5px;
     border: 1px solid #cccc;
     box-sizing: border-box;
-    background-color: #cccc;
+    background-color: #fff;
   }
   
   .form-group textarea {
