--- a/src/Components/Pages/ShoppingCart/ShoppingCart.css
+++ b/src/Components/Pages/ShoppingCart/ShoppingCart.css
@@ -3,5 +3,6 @@
     padding: 20px;
     text-align: center; /* Puedes cambiar esto según el diseño que quieras */
     font-size: 18px;
+    flex-wrap: wrap;
   }
   
