--- a/src/Components/Layouts/Carrousel/Carrousel.css
+++ b/src/Components/Layouts/Carrousel/Carrousel.css
@@ -76,3 +76,14 @@
 .dot.active {
   background-color: rgba(0, 0, 0, 0.8);
 }
+
+@media (max-width:480px) {
+  .slide img {
+    width: 100%; /* Ocupará todo el ancho disponible */
+    height: 100%; /* Ocupará todo el alto disponible */
+    object-fit: cover; /* Escala la imagen para cubrir sin distorsionar */
+    border-radius: 10px; /* Bordes redondeados opcionales */
+    transition: transform 0.5s ease-in-out; /* Suaviza las transiciones */
+  }
+  
+}
