--- a/src/Components/Layouts/ContactForm/ContactForm.css
+++ b/src/Components/Layouts/ContactForm/ContactForm.css
@@ -54,3 +54,12 @@
     transition: background-color 0.3s ease;
     padding-bottom: 1rem;
 }
+
+@media  (max-width: 480px){
+  .form{
+    width: 95%;
+    display: flex;
+    justify-content: center;
+  }
+}
+
