--- a/src/Components/Pages/LogIn/LogIn.css
+++ b/src/Components/Pages/LogIn/LogIn.css
@@ -118,4 +118,10 @@
   .signup-link-text:hover {
     text-decoration: underline #e3ff9f;
   }
+
+  @media (max-width :352px){
+    .btn-login{
+      width: 14rem;
+    }
+  }
   
