--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -99,7 +99,7 @@ body {
   cursor: pointer;
 }
 
-.buttons .btn {
+.buttons .btn-sign {
   color: white;
   text-decoration: none;
   margin-left: 1rem;
@@ -115,6 +115,8 @@ body {
   align-items: center;
   border-radius: 20px;
   transition: background-color 500ms;
+  color: #fff;
+  text-decoration: none;
 }
 
 .register:hover {
@@ -222,6 +224,9 @@ body {
   margin: 15px 0;
 }
 
+.btn-sign{
+  margin-right: 1rem;
+}
 
 @media (max-width: 1279px){
 
@@ -288,5 +293,39 @@ body {
     font-size: 1rem;
   } 
 
+}
+
+@media (max-width :352px){
+  .logo{
+    display: none;
+  }
+
+  .buttons{
+    margin-right: 50px; 
+    width: 20rem;
+  }
+
+  .container-items.scrolled{
+    width: 95%;
+    display: flex;
+    align-items: center;
+  }
+
+  .container-items.scrolled .btn{
+  margin: 0;
+  }
+
+  .shopi-bag{
+    margin: 0;
+  }
+
+  .register{
+    width: 6rem;
+  }
+
+  .btn-sign{
+    width: 7rem;
+  }
 
 }
+
