--- a/src/Components/Pages/Footer/Footer.css
+++ b/src/Components/Pages/Footer/Footer.css
@@ -8,3 +8,10 @@
     color: white;
     width: 100%;
 }
+
+@media (max-width: 352px){
+    .derechos{
+        display: flex;
+        text-align: center;
+    }
+}
