se añaden media queries para la vita de 768px

--- a/src/Components/Layouts/ImageLink/ImageLink.css
+++ b/src/Components/Layouts/ImageLink/ImageLink.css
@@ -14,3 +14,16 @@
     border-radius: 1rem;
    
 }
+
+@media (max-width: 768px) {
+    .image-link{
+        width: 16rem;
+        height: 16rem;
+    }
+
+    .image-link-img{
+        width: 16.5rem;
+        height: 16.5rem;
+    }
+    
+}
