--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -293,6 +293,17 @@ body {
     font-size: 1rem;
   } 
 
+  .logo{
+    display: none;
+  }
+
+  .buttons{
+    gap: 2rem;
+  }
+
+  .container-items.scrolled .buttons{
+    gap: 1rem;
+  }
 }
 
 @media (max-width :352px){
@@ -303,12 +314,18 @@ body {
   .buttons{
     margin-right: 50px; 
     width: 20rem;
+    gap: 0;
   }
 
   .container-items.scrolled{
     width: 95%;
     display: flex;
     align-items: center;
+
+  }
+
+  .container-items.scrolled .buttons{
+    gap: 0;
   }
 
   .container-items.scrolled .btn{
