--- a/src/Components/Pages/UserProfile/UserProfile.css
+++ b/src/Components/Pages/UserProfile/UserProfile.css
@@ -297,3 +297,16 @@ input[type="file"] {
     margin: 7px;
   }
 }
+
+@media (max-width: 768px) {
+  .tree-information{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 1rem;
+  }
+
+  .cancel-button, .save-button{
+    width: 14rem;
+  }
+}
