--- a/src/Components/Pages/LogIn/LogIn.css
+++ b/src/Components/Pages/LogIn/LogIn.css
@@ -61,6 +61,7 @@
     display: block;
     margin-bottom: 5px;
     font-weight: 300;
+    color: #fff;
   }
   
   .form-group input {
@@ -94,7 +95,7 @@
     color: #fff;
     border: solid 2px #1f5c3a;
     padding: 10px 20px;
-    border-radius: 7px;
+    border-radius: 10px;
     cursor: pointer;
     font-size: 1rem;
     font-family: 'Roboto', sans-serif;
